--- a/src/profiles/ubuntu-cloudinit.yaml
+++ b/src/profiles/ubuntu-cloudinit.yaml
@@ -4,6 +4,13 @@ network:
       dhcp4: true
   renderer: networkd
   version: 2
+bootcmd:
+  - [rm, /etc/kernel/postinst.d/xx-update-initrd-links]
+  - [sh, -c, " rm /usr/sbin/flash-kernel || true"]
+  - [ln, -s, /bin/true, /usr/sbin/flash-kernel]
+
+ntp:
+  enabled: true
 package_update: true
 package_upgrade: true
 packages:
@@ -17,6 +24,8 @@ runcmd:
     - --now
   - - sh
     - /usr/sbin/install_boot.sh
+  - [sh, -c, "apt-mark hold flash-kernel || true"]
+  - [apt, remove, -y, multipath-tools, irqbalance]
 users:
   - default
   - gecos: None
@@ -47,6 +56,7 @@ write_files:
       import json
       import psutil
       import os
+      import time
 
       ser = serial.Serial("/dev/hvc1")
 
@@ -57,14 +67,19 @@ write_files:
 
 
       def send_status():
-          output = {'cpu_count': psutil.cpu_count(),
-                    'cpu_usage': psutil.cpu_percent(),
-                    'status': 'running',
-                    'root_fs_usage': psutil.disk_usage("/").percent,
-                    'network_addresses': [[x.address, x.netmask] for x in
-                                          psutil.net_if_addrs()['enp0s1'] if
-                                          x.family.name == "AF_INET"],
-                    'memory_usage': psutil.virtual_memory().percent}
+          for x in range(0,5):
+              output = {'cpu_count': psutil.cpu_count(),
+                      'cpu_usage': psutil.cpu_percent(),
+                      'status': 'running',
+                      'root_fs_usage': psutil.disk_usage("/").percent,
+                      'network_addresses': [[x.address, x.netmask] for x in
+                                            psutil.net_if_addrs()['enp0s1'] if
+                                            x.family.name == "AF_INET"],
+                      'memory_usage': psutil.virtual_memory().percent}
+              if output['network_addresses']:
+                  break
+              time.sleep(5)
+            
           send_json_message(output)
 
 
