Switch to UFS for the boot volume as it supports symlinks. Ensure ip_tables module is available. Add Ubuntu 22.04 daily

--- a/macos_virt/profiles/ubuntu-cloudinit.yaml
+++ b/macos_virt/profiles/ubuntu-cloudinit.yaml
@@ -5,7 +5,6 @@ network:
   renderer: networkd
   version: 2
 bootcmd:
-  - [rm, /etc/kernel/postinst.d/xx-update-initrd-links]
   - [sh, -c, " rm /usr/sbin/flash-kernel || true"]
   - [ln, -s, /bin/true, /usr/sbin/flash-kernel]
 
@@ -16,6 +15,7 @@ package_upgrade: true
 packages:
   - python3-psutil
   - sshfs
+  - udftools
 runcmd:
   - - systemctl
     - daemon-reload
