--- a/macos_virt/service/docker-service-override.conf
+++ b/macos_virt/service/docker-service-override.conf
@@ -1,3 +1,3 @@
 [Service]
 ExecStart=
-ExecStart=/usr/bin/dockerd -H fd:// -H tcp://0.0.0.0:2375
+ExecStart=/bin/sh -c "modprobe ip_tables || apt-get install --reinstall -y linux-modules-`uname -r`; exec /usr/bin/dockerd -H fd:// -H tcp://0.0.0.0:2375"
